force-app/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <label>Team</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>