force-app/main/default/objects/Team__c/fields/Photo_Url__c.field-meta.xml
<CustomField>
    <fullName>Photo_Url__c</fullName>
    <label>Photo Url</label>
    <type>Url</type>
</CustomField>