force-app/main/default/objects/Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Role and Title in the Executive Team of the cafe</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>