force-app/main/default/objects/Team__c/fields/Social_connect__c.field-meta.xml
<CustomField>
    <fullName>Social_connect__c</fullName>
    <label>Social connect</label>
    <type>Url</type>
</CustomField>