force-app/main/default/objects/Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Email__c</columns>
    <columns>Social_connect__c</columns>
    <columns>Photo_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>